--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,18 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn {
-    @apply bg-gray-300 rounded px-2 py-1 mb-1 cursor-pointer border;
+html {
+    font-size: 16px;
+    @apply bg-gray-light-3;
 }
 
-.btn:hover {
-    @apply border-gray-400 text-indigo-600;
+body {
+    font-family: "Source Sans Pro";
+    @apply text-base;
+}
+
+h1,
+h2,
+.subtitle {
+    font-family: "Montserrat";
 }
 
 h1 {
-    @apply font-bold text-2xl mb-3;
+    @apply font-extrabold text-xl text-center;
+}
+
+h2 {
+    @apply font-medium text-lg text-center;
 }
 
 .subtitle {
-    @apply uppercase text-gray-500 text-sm;
+    @apply font-semibold text-sm uppercase text-gray-light text-center;
+}
+
+a {
+    @apply text-primary;
+}
+
+.btn {
+    @apply inline-block shadow-md rounded bg-primary text-white py-2 px-4 outline-none;
+}
+
+.btn:focus {
+    @apply outline-none;
+}
+
+.btn:hover {
+    @apply bg-primary-dark;
+}
+
+.btn:active {
+    @apply bg-primary-dark-3 outline-none;
 }
