--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,50 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    font-size: 16px;
-    @apply bg-gray-light-3;
-}
+@layer components {
+    html {
+        font-size: 16px;
+        @apply bg-gray-light-3;
+    }
 
-body {
-    font-family: "Source Sans Pro";
-    @apply text-base;
-}
+    body {
+        font-family: "Source Sans Pro";
+        @apply text-base;
+    }
 
-h1,
-h2,
-.subtitle {
-    font-family: "Montserrat";
-}
+    h1,
+    h2,
+    .subtitle {
+        font-family: "Montserrat";
+    }
 
-h1 {
-    @apply font-extrabold text-xl text-center;
-}
+    h1 {
+        @apply font-extrabold text-xl text-center;
+    }
 
-h2 {
-    @apply font-medium text-lg text-center;
-}
+    h2 {
+        @apply font-medium text-lg text-center;
+    }
 
-.subtitle {
-    @apply font-semibold text-sm uppercase text-gray-light text-center;
-}
+    .subtitle {
+        @apply font-semibold text-sm uppercase text-gray-light text-center;
+    }
 
-a {
-    @apply text-primary;
-}
+    a {
+        @apply text-primary;
+    }
 
-.btn {
-    @apply inline-block shadow-md rounded bg-primary text-white py-2 px-4 outline-none;
-}
+    .btn {
+        @apply inline-block shadow-md rounded bg-primary text-white py-2 px-4 outline-none;
+    }
 
-.btn:focus {
-    @apply outline-none;
-}
+    .btn:focus {
+        @apply outline-none;
+    }
 
-.btn:hover {
-    @apply bg-primary-dark;
-}
+    .btn:hover {
+        @apply bg-primary-dark;
+    }
 
-.btn:active {
-    @apply bg-primary-dark-3 outline-none;
+    .btn:active {
+        @apply bg-primary-dark-3 outline-none;
+    }
+
+    input {
+        @apply px-2 rounded border-2 border-solid border-primary hover:border-primary-light-2 focus:border-primary-dark-3 outline-none;
+    }
+
+    .spinner .spin {
+        border-color: theme("colors.gray.light-3");
+        border-top-color: theme("colors.primary.DEFAULT");
+    }
 }
