--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 
     body {
         font-family: "Source Sans Pro";
-        @apply text-base;
+        @apply text-base text-gray-dark-3;
     }
 
     h1,
